trying a few things

--- a/Project-2/As2Ex4-2.ipynb
+++ b/Project-2/As2Ex4-2.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "cost_public = DefineVariable('cost_public_inc', cost_transit, database)\n",
     "dur_public = DefineVariable('dur_public', (dur_pt_access + dur_pt_rail + dur_pt_bus + dur_pt_int),database)\n",
-    "cost_driving_inc = DefineVariable('cost_driving', (cost_driving_ccharge + cost_driving_fuel)*1.15, database)\n",
+    "cost_driving_inc = DefineVariable('cost_driving', (cost_driving_ccharge + cost_driving_fuel)*10, database)\n",
     "\n",
     "Opt1 = Constant1 + Total_TT1 * ((dur_walking) ** LAMBDA -1)/LAMBDA + Time_Age_1 * dur_walking * age\n",
     "Opt2 = Constant2 + Total_TT2 * ((dur_cycling) ** LAMBDA -1)/LAMBDA+ CarOwn_2 * car_ownership +\\\n",
@@ -130,8 +130,8 @@
      "text": [
       "Nbr of observations: 5000\n",
       "LL(0) =    -6931.472\n",
-      "LL(beta) = -3650.465\n",
-      "rho bar square = 0.471\n",
+      "LL(beta) = -3660.096\n",
+      "rho bar square = 0.469\n",
       "Output file: ./model-nested-output/logit_nested_lpmc_sm_motor_driving_increased.html\n"
      ]
     },
@@ -169,246 +169,246 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CarOwn_2</th>\n",
-       "      <td>-0.198</td>\n",
+       "      <td>-0.188</td>\n",
        "      <td>0</td>\n",
        "      <td>0.138</td>\n",
-       "      <td>-1.43</td>\n",
-       "      <td>0.152</td>\n",
-       "      <td>0.147</td>\n",
-       "      <td>-1.34</td>\n",
-       "      <td>0.179</td>\n",
+       "      <td>-1.36</td>\n",
+       "      <td>0.173</td>\n",
+       "      <td>0.145</td>\n",
+       "      <td>-1.29</td>\n",
+       "      <td>0.195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CarOwn_3</th>\n",
-       "      <td>-0.238</td>\n",
+       "      <td>-0.184</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.138</td>\n",
-       "      <td>-1.72</td>\n",
-       "      <td>0.0847</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>-1.49</td>\n",
        "      <td>0.137</td>\n",
+       "      <td>-1.34</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.157</td>\n",
+       "      <td>-1.17</td>\n",
+       "      <td>0.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CarOwn_4</th>\n",
-       "      <td>0.82</td>\n",
+       "      <td>0.801</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0904</td>\n",
-       "      <td>9.07</td>\n",
+       "      <td>0.0902</td>\n",
+       "      <td>8.87</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0979</td>\n",
-       "      <td>8.37</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0972</td>\n",
+       "      <td>8.23</td>\n",
+       "      <td>2.22e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Constant2</th>\n",
-       "      <td>-2.29</td>\n",
+       "      <td>-2.18</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.46</td>\n",
-       "      <td>-4.98</td>\n",
-       "      <td>6.22e-07</td>\n",
-       "      <td>0.426</td>\n",
-       "      <td>-5.39</td>\n",
-       "      <td>7.08e-08</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>-4.94</td>\n",
+       "      <td>7.63e-07</td>\n",
+       "      <td>0.403</td>\n",
+       "      <td>-5.4</td>\n",
+       "      <td>6.68e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Constant3</th>\n",
-       "      <td>1.98</td>\n",
+       "      <td>1.84</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.234</td>\n",
-       "      <td>8.49</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.226</td>\n",
-       "      <td>8.78</td>\n",
+       "      <td>0.227</td>\n",
+       "      <td>8.12</td>\n",
+       "      <td>4.44e-16</td>\n",
+       "      <td>0.217</td>\n",
+       "      <td>8.5</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Constant4</th>\n",
-       "      <td>0.0573</td>\n",
+       "      <td>0.23</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.393</td>\n",
-       "      <td>0.146</td>\n",
-       "      <td>0.884</td>\n",
-       "      <td>0.457</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>0.9</td>\n",
+       "      <td>0.372</td>\n",
+       "      <td>0.617</td>\n",
+       "      <td>0.537</td>\n",
+       "      <td>0.421</td>\n",
+       "      <td>0.545</td>\n",
+       "      <td>0.586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cost</th>\n",
-       "      <td>-0.0818</td>\n",
+       "      <td>-0.00811</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0178</td>\n",
-       "      <td>-4.59</td>\n",
-       "      <td>4.37e-06</td>\n",
-       "      <td>0.0222</td>\n",
-       "      <td>-3.69</td>\n",
-       "      <td>0.000221</td>\n",
+       "      <td>0.00194</td>\n",
+       "      <td>-4.19</td>\n",
+       "      <td>2.8e-05</td>\n",
+       "      <td>0.00232</td>\n",
+       "      <td>-3.5</td>\n",
+       "      <td>0.000469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LAMBDA</th>\n",
-       "      <td>-0.0166</td>\n",
+       "      <td>-0.0564</td>\n",
        "      <td>0</td>\n",
        "      <td>0.102</td>\n",
-       "      <td>-0.163</td>\n",
-       "      <td>0.871</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>-0.139</td>\n",
-       "      <td>0.89</td>\n",
+       "      <td>-0.551</td>\n",
+       "      <td>0.581</td>\n",
+       "      <td>0.116</td>\n",
+       "      <td>-0.487</td>\n",
+       "      <td>0.626</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>N_MOTOR</th>\n",
-       "      <td>1.64</td>\n",
+       "      <td>1.77</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.281</td>\n",
-       "      <td>5.85</td>\n",
-       "      <td>4.86e-09</td>\n",
-       "      <td>0.338</td>\n",
-       "      <td>4.86</td>\n",
-       "      <td>1.2e-06</td>\n",
+       "      <td>0.324</td>\n",
+       "      <td>5.46</td>\n",
+       "      <td>4.65e-08</td>\n",
+       "      <td>0.384</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>4.02e-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>N_SM</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>4.54</td>\n",
-       "      <td>5.71e-06</td>\n",
-       "      <td>0.305</td>\n",
-       "      <td>3.27</td>\n",
-       "      <td>0.00106</td>\n",
+       "      <td>0.224</td>\n",
+       "      <td>4.47</td>\n",
+       "      <td>7.87e-06</td>\n",
+       "      <td>0.307</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>0.0011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Time_Age_1</th>\n",
-       "      <td>-0.0508</td>\n",
+       "      <td>-0.0494</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.00848</td>\n",
-       "      <td>-5.98</td>\n",
-       "      <td>2.17e-09</td>\n",
-       "      <td>0.00934</td>\n",
-       "      <td>-5.44</td>\n",
-       "      <td>5.46e-08</td>\n",
+       "      <td>0.00827</td>\n",
+       "      <td>-5.97</td>\n",
+       "      <td>2.42e-09</td>\n",
+       "      <td>0.009</td>\n",
+       "      <td>-5.49</td>\n",
+       "      <td>4.08e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Time_Age_2</th>\n",
-       "      <td>-0.0279</td>\n",
+       "      <td>-0.0247</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0141</td>\n",
-       "      <td>-1.97</td>\n",
-       "      <td>0.0484</td>\n",
-       "      <td>0.013</td>\n",
-       "      <td>-2.15</td>\n",
-       "      <td>0.0318</td>\n",
+       "      <td>0.0134</td>\n",
+       "      <td>-1.85</td>\n",
+       "      <td>0.0645</td>\n",
+       "      <td>0.0119</td>\n",
+       "      <td>-2.09</td>\n",
+       "      <td>0.037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Time_Age_3</th>\n",
-       "      <td>-0.0339</td>\n",
+       "      <td>-0.0306</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.00804</td>\n",
-       "      <td>-4.21</td>\n",
-       "      <td>2.51e-05</td>\n",
-       "      <td>0.00846</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>6.33e-05</td>\n",
+       "      <td>0.00755</td>\n",
+       "      <td>-4.06</td>\n",
+       "      <td>4.93e-05</td>\n",
+       "      <td>0.00785</td>\n",
+       "      <td>-3.9</td>\n",
+       "      <td>9.49e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Time_Age_4</th>\n",
-       "      <td>-0.042</td>\n",
+       "      <td>-0.0371</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0118</td>\n",
-       "      <td>-3.55</td>\n",
-       "      <td>0.000387</td>\n",
-       "      <td>0.0126</td>\n",
-       "      <td>-3.33</td>\n",
-       "      <td>0.000854</td>\n",
+       "      <td>0.0108</td>\n",
+       "      <td>-3.44</td>\n",
+       "      <td>0.000586</td>\n",
+       "      <td>0.0112</td>\n",
+       "      <td>-3.31</td>\n",
+       "      <td>0.000928</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT1</th>\n",
-       "      <td>-2.76</td>\n",
+       "      <td>-2.6</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.413</td>\n",
-       "      <td>-6.68</td>\n",
-       "      <td>2.47e-11</td>\n",
-       "      <td>0.513</td>\n",
-       "      <td>-5.38</td>\n",
-       "      <td>7.54e-08</td>\n",
+       "      <td>0.393</td>\n",
+       "      <td>-6.62</td>\n",
+       "      <td>3.51e-11</td>\n",
+       "      <td>0.473</td>\n",
+       "      <td>-5.5</td>\n",
+       "      <td>3.86e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT2</th>\n",
-       "      <td>-1.27</td>\n",
+       "      <td>-1.12</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.335</td>\n",
-       "      <td>-3.8</td>\n",
-       "      <td>0.000145</td>\n",
-       "      <td>0.363</td>\n",
-       "      <td>-3.5</td>\n",
-       "      <td>0.00046</td>\n",
+       "      <td>0.305</td>\n",
+       "      <td>-3.68</td>\n",
+       "      <td>0.000231</td>\n",
+       "      <td>0.325</td>\n",
+       "      <td>-3.46</td>\n",
+       "      <td>0.000547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT3</th>\n",
-       "      <td>-0.626</td>\n",
+       "      <td>-0.592</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.205</td>\n",
-       "      <td>-3.06</td>\n",
-       "      <td>0.00224</td>\n",
-       "      <td>0.256</td>\n",
-       "      <td>-2.45</td>\n",
-       "      <td>0.0145</td>\n",
+       "      <td>0.192</td>\n",
+       "      <td>-3.08</td>\n",
+       "      <td>0.00207</td>\n",
+       "      <td>0.238</td>\n",
+       "      <td>-2.49</td>\n",
+       "      <td>0.0129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT4</th>\n",
-       "      <td>-0.958</td>\n",
+       "      <td>-0.815</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>-3.19</td>\n",
-       "      <td>0.00143</td>\n",
-       "      <td>0.378</td>\n",
-       "      <td>-2.53</td>\n",
-       "      <td>0.0113</td>\n",
+       "      <td>0.261</td>\n",
+       "      <td>-3.12</td>\n",
+       "      <td>0.00181</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>-2.55</td>\n",
+       "      <td>0.0108</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Value  Active bound  Std err  t-test  p-value  Rob. Std err  \\\n",
-       "CarOwn_2    -0.198             0    0.138   -1.43    0.152         0.147   \n",
-       "CarOwn_3    -0.238             0    0.138   -1.72   0.0847          0.16   \n",
-       "CarOwn_4      0.82             0   0.0904    9.07        0        0.0979   \n",
-       "Constant2    -2.29             0     0.46   -4.98 6.22e-07         0.426   \n",
-       "Constant3     1.98             0    0.234    8.49        0         0.226   \n",
-       "Constant4   0.0573             0    0.393   0.146    0.884         0.457   \n",
-       "Cost       -0.0818             0   0.0178   -4.59 4.37e-06        0.0222   \n",
-       "LAMBDA     -0.0166             0    0.102  -0.163    0.871          0.12   \n",
-       "N_MOTOR       1.64             0    0.281    5.85 4.86e-09         0.338   \n",
-       "N_SM             1             1     0.22    4.54 5.71e-06         0.305   \n",
-       "Time_Age_1 -0.0508             0  0.00848   -5.98 2.17e-09       0.00934   \n",
-       "Time_Age_2 -0.0279             0   0.0141   -1.97   0.0484         0.013   \n",
-       "Time_Age_3 -0.0339             0  0.00804   -4.21 2.51e-05       0.00846   \n",
-       "Time_Age_4  -0.042             0   0.0118   -3.55 0.000387        0.0126   \n",
-       "Total_TT1    -2.76             0    0.413   -6.68 2.47e-11         0.513   \n",
-       "Total_TT2    -1.27             0    0.335    -3.8 0.000145         0.363   \n",
-       "Total_TT3   -0.626             0    0.205   -3.06  0.00224         0.256   \n",
-       "Total_TT4   -0.958             0      0.3   -3.19  0.00143         0.378   \n",
+       "              Value  Active bound  Std err  t-test  p-value  Rob. Std err  \\\n",
+       "CarOwn_2     -0.188             0    0.138   -1.36    0.173         0.145   \n",
+       "CarOwn_3     -0.184             0    0.137   -1.34     0.18         0.157   \n",
+       "CarOwn_4      0.801             0   0.0902    8.87        0        0.0972   \n",
+       "Constant2     -2.18             0     0.44   -4.94 7.63e-07         0.403   \n",
+       "Constant3      1.84             0    0.227    8.12 4.44e-16         0.217   \n",
+       "Constant4      0.23             0    0.372   0.617    0.537         0.421   \n",
+       "Cost       -0.00811             0  0.00194   -4.19  2.8e-05       0.00232   \n",
+       "LAMBDA      -0.0564             0    0.102  -0.551    0.581         0.116   \n",
+       "N_MOTOR        1.77             0    0.324    5.46 4.65e-08         0.384   \n",
+       "N_SM              1             1    0.224    4.47 7.87e-06         0.307   \n",
+       "Time_Age_1  -0.0494             0  0.00827   -5.97 2.42e-09         0.009   \n",
+       "Time_Age_2  -0.0247             0   0.0134   -1.85   0.0645        0.0119   \n",
+       "Time_Age_3  -0.0306             0  0.00755   -4.06 4.93e-05       0.00785   \n",
+       "Time_Age_4  -0.0371             0   0.0108   -3.44 0.000586        0.0112   \n",
+       "Total_TT1      -2.6             0    0.393   -6.62 3.51e-11         0.473   \n",
+       "Total_TT2     -1.12             0    0.305   -3.68 0.000231         0.325   \n",
+       "Total_TT3    -0.592             0    0.192   -3.08  0.00207         0.238   \n",
+       "Total_TT4    -0.815             0    0.261   -3.12  0.00181          0.32   \n",
        "\n",
        "            Rob. t-test  Rob. p-value  \n",
-       "CarOwn_2          -1.34         0.179  \n",
-       "CarOwn_3          -1.49         0.137  \n",
-       "CarOwn_4           8.37             0  \n",
-       "Constant2         -5.39      7.08e-08  \n",
-       "Constant3          8.78             0  \n",
-       "Constant4         0.125           0.9  \n",
-       "Cost              -3.69      0.000221  \n",
-       "LAMBDA           -0.139          0.89  \n",
-       "N_MOTOR            4.86       1.2e-06  \n",
-       "N_SM               3.27       0.00106  \n",
-       "Time_Age_1        -5.44      5.46e-08  \n",
-       "Time_Age_2        -2.15        0.0318  \n",
-       "Time_Age_3           -4      6.33e-05  \n",
-       "Time_Age_4        -3.33      0.000854  \n",
-       "Total_TT1         -5.38      7.54e-08  \n",
-       "Total_TT2          -3.5       0.00046  \n",
-       "Total_TT3         -2.45        0.0145  \n",
-       "Total_TT4         -2.53        0.0113  "
+       "CarOwn_2          -1.29         0.195  \n",
+       "CarOwn_3          -1.17          0.24  \n",
+       "CarOwn_4           8.23      2.22e-16  \n",
+       "Constant2          -5.4      6.68e-08  \n",
+       "Constant3           8.5             0  \n",
+       "Constant4         0.545         0.586  \n",
+       "Cost               -3.5      0.000469  \n",
+       "LAMBDA           -0.487         0.626  \n",
+       "N_MOTOR            4.61      4.02e-06  \n",
+       "N_SM               3.26        0.0011  \n",
+       "Time_Age_1        -5.49      4.08e-08  \n",
+       "Time_Age_2        -2.09         0.037  \n",
+       "Time_Age_3         -3.9      9.49e-05  \n",
+       "Time_Age_4        -3.31      0.000928  \n",
+       "Total_TT1          -5.5      3.86e-08  \n",
+       "Total_TT2         -3.46      0.000547  \n",
+       "Total_TT3         -2.49        0.0129  \n",
+       "Total_TT4         -2.55        0.0108  "
       ]
      },
      "execution_count": 5,
@@ -457,10 +457,10 @@
      "text": [
       "Predicted market shares:\n",
       "\n",
-      "marketShare_walking: 17.59% (15.77%, 19.83%)\n",
-      "marketShare_cycling: 2.84% (2.17%, 5.89%)\n",
-      "marketShare_public: 36.44% (33.39%, 40.11%)\n",
-      "marketShare_car: 43.13% (37.05%, 45.66%)\n"
+      "marketShare_walking: 17.59% (15.16%, 20.12%)\n",
+      "marketShare_cycling: 2.84% (2.18%, 7.29%)\n",
+      "marketShare_public: 36.48% (33.38%, 41.10%)\n",
+      "marketShare_car: 43.09% (35.33%, 45.50%)\n"
      ]
     }
    ],
@@ -523,33 +523,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'CarOwn_2': -0.1993888902362113,\n",
-       " 'CarOwn_3': -0.23988693357401222,\n",
-       " 'CarOwn_4': 0.8169483628265232,\n",
-       " 'Constant2': -2.3243561850487158,\n",
-       " 'Constant3': 2.027755719752533,\n",
-       " 'Constant4': 0.019661812248610605,\n",
-       " 'Cost': -0.08800899109684662,\n",
-       " 'LAMBDA': -0.0013938133073915972,\n",
-       " 'N_MOTOR': 1.6426979177515224,\n",
+       "{'CarOwn_2': -0.19824050646055802,\n",
+       " 'CarOwn_3': -0.23790293705451254,\n",
+       " 'CarOwn_4': 0.8195235809703245,\n",
+       " 'Constant2': -2.2939742642825074,\n",
+       " 'Constant3': 1.9821245195455324,\n",
+       " 'Constant4': 0.05733280198667734,\n",
+       " 'Cost': -0.08182360751779177,\n",
+       " 'LAMBDA': -0.016582907025691523,\n",
+       " 'N_MOTOR': 1.643091532516187,\n",
        " 'N_SM': 1.0,\n",
-       " 'Time_Age_1': -0.051057218790012,\n",
-       " 'Time_Age_2': -0.028391246481041455,\n",
-       " 'Time_Age_3': -0.03456558824654881,\n",
-       " 'Time_Age_4': -0.043405325169158265,\n",
-       " 'Total_TT1': -2.8065802972269,\n",
-       " 'Total_TT2': -1.31777982833698,\n",
-       " 'Total_TT3': -0.6314042362124275,\n",
-       " 'Total_TT4': -1.0022740945930384}"
+       " 'Time_Age_1': -0.05075525481281361,\n",
+       " 'Time_Age_2': -0.027886341475522256,\n",
+       " 'Time_Age_3': -0.033860197169865644,\n",
+       " 'Time_Age_4': -0.04203477494473885,\n",
+       " 'Total_TT1': -2.758329505351357,\n",
+       " 'Total_TT2': -1.272147785737909,\n",
+       " 'Total_TT3': -0.6262177999733233,\n",
+       " 'Total_TT4': -0.9575912174276116}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
