--- a/Project-2/LPMC_model_CN_sm_motor_public_withoutCarOwn.ipynb
+++ b/Project-2/LPMC_model_CN_sm_motor_public_withoutCarOwn.ipynb
@@ -11,9 +11,9 @@
      "text": [
       "Nbr of observations: 5000\n",
       "LL(0) =    -6931.472\n",
-      "LL(beta) = -3645.243\n",
-      "rho bar square = 0.471\n",
-      "Output file: ./model-nested-output/logit_CN_lpmc_sm_motor_public.html\n"
+      "LL(beta) = -4143.811\n",
+      "rho bar square = 0.4\n",
+      "Output file: ./model-nested-output/logit_CN_lpmc_sm_motor_public_withoutCarOwn.html\n"
      ]
     },
     {
@@ -38,6 +38,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Value</th>\n",
+       "      <th>Active bound</th>\n",
        "      <th>Std err</th>\n",
        "      <th>t-test</th>\n",
        "      <th>p-value</th>\n",
@@ -48,241 +49,221 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>CarOwn_2</th>\n",
-       "      <td>-0.189</td>\n",
-       "      <td>0.116</td>\n",
-       "      <td>-1.64</td>\n",
-       "      <td>0.102</td>\n",
-       "      <td>0.118</td>\n",
-       "      <td>-1.6</td>\n",
-       "      <td>0.109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CarOwn_3</th>\n",
-       "      <td>-0.211</td>\n",
-       "      <td>0.105</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>0.0456</td>\n",
-       "      <td>0.106</td>\n",
-       "      <td>-1.99</td>\n",
-       "      <td>0.0464</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CarOwn_4</th>\n",
-       "      <td>0.817</td>\n",
-       "      <td>0.0816</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0814</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Constant2</th>\n",
-       "      <td>-2</td>\n",
-       "      <td>0.409</td>\n",
-       "      <td>-4.89</td>\n",
-       "      <td>1.01e-06</td>\n",
-       "      <td>0.411</td>\n",
-       "      <td>-4.87</td>\n",
-       "      <td>1.14e-06</td>\n",
+       "      <td>-2.95</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.508</td>\n",
+       "      <td>-5.81</td>\n",
+       "      <td>6.07e-09</td>\n",
+       "      <td>0.476</td>\n",
+       "      <td>-6.2</td>\n",
+       "      <td>5.5e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Constant3</th>\n",
-       "      <td>1.89</td>\n",
-       "      <td>0.218</td>\n",
-       "      <td>8.66</td>\n",
+       "      <td>1.6</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.214</td>\n",
-       "      <td>8.82</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.8e+308</td>\n",
+       "      <td>8.89e-309</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>6.39</td>\n",
+       "      <td>1.68e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Constant4</th>\n",
-       "      <td>0.0597</td>\n",
-       "      <td>0.318</td>\n",
-       "      <td>0.188</td>\n",
-       "      <td>0.851</td>\n",
-       "      <td>0.342</td>\n",
-       "      <td>0.175</td>\n",
-       "      <td>0.861</td>\n",
+       "      <td>0.181</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>0.396</td>\n",
+       "      <td>0.692</td>\n",
+       "      <td>0.542</td>\n",
+       "      <td>0.335</td>\n",
+       "      <td>0.738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cost</th>\n",
-       "      <td>-0.079</td>\n",
-       "      <td>0.0151</td>\n",
-       "      <td>-5.23</td>\n",
-       "      <td>1.68e-07</td>\n",
-       "      <td>0.0175</td>\n",
-       "      <td>-4.52</td>\n",
-       "      <td>6.24e-06</td>\n",
+       "      <td>-0.105</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0202</td>\n",
+       "      <td>-5.19</td>\n",
+       "      <td>2.13e-07</td>\n",
+       "      <td>0.0239</td>\n",
+       "      <td>-4.38</td>\n",
+       "      <td>1.18e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LAMBDA</th>\n",
-       "      <td>-0.0626</td>\n",
-       "      <td>0.0998</td>\n",
-       "      <td>-0.627</td>\n",
-       "      <td>0.531</td>\n",
-       "      <td>0.111</td>\n",
-       "      <td>-0.562</td>\n",
-       "      <td>0.574</td>\n",
+       "      <td>0.0767</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0896</td>\n",
+       "      <td>0.856</td>\n",
+       "      <td>0.392</td>\n",
+       "      <td>0.112</td>\n",
+       "      <td>0.685</td>\n",
+       "      <td>0.494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>N_MOTOR</th>\n",
-       "      <td>2.35</td>\n",
-       "      <td>0.369</td>\n",
-       "      <td>6.39</td>\n",
-       "      <td>1.67e-10</td>\n",
-       "      <td>0.46</td>\n",
-       "      <td>5.12</td>\n",
-       "      <td>3.01e-07</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.218</td>\n",
+       "      <td>6.37</td>\n",
+       "      <td>1.87e-10</td>\n",
+       "      <td>0.261</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>9.84e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>N_SM</th>\n",
-       "      <td>1.19</td>\n",
-       "      <td>0.126</td>\n",
-       "      <td>9.39</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.156</td>\n",
-       "      <td>7.59</td>\n",
-       "      <td>3.09e-14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.215</td>\n",
+       "      <td>4.65</td>\n",
+       "      <td>3.29e-06</td>\n",
+       "      <td>0.318</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>0.00168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Time_Age_1</th>\n",
-       "      <td>-0.0459</td>\n",
-       "      <td>0.00715</td>\n",
-       "      <td>-6.42</td>\n",
-       "      <td>1.36e-10</td>\n",
-       "      <td>0.00732</td>\n",
-       "      <td>-6.27</td>\n",
-       "      <td>3.68e-10</td>\n",
+       "      <td>-0.048</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00843</td>\n",
+       "      <td>-5.69</td>\n",
+       "      <td>1.27e-08</td>\n",
+       "      <td>0.00941</td>\n",
+       "      <td>-5.1</td>\n",
+       "      <td>3.47e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Time_Age_2</th>\n",
-       "      <td>-0.0267</td>\n",
-       "      <td>0.0122</td>\n",
-       "      <td>-2.19</td>\n",
-       "      <td>0.0287</td>\n",
-       "      <td>0.0112</td>\n",
-       "      <td>-2.38</td>\n",
-       "      <td>0.0173</td>\n",
+       "      <td>-0.0198</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0144</td>\n",
+       "      <td>-1.38</td>\n",
+       "      <td>0.169</td>\n",
+       "      <td>0.0131</td>\n",
+       "      <td>-1.51</td>\n",
+       "      <td>0.131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Time_Age_3</th>\n",
-       "      <td>-0.0329</td>\n",
-       "      <td>0.0067</td>\n",
-       "      <td>-4.91</td>\n",
-       "      <td>9.34e-07</td>\n",
-       "      <td>0.00679</td>\n",
-       "      <td>-4.84</td>\n",
-       "      <td>1.29e-06</td>\n",
+       "      <td>-0.0313</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00831</td>\n",
+       "      <td>-3.77</td>\n",
+       "      <td>0.000165</td>\n",
+       "      <td>0.00874</td>\n",
+       "      <td>-3.58</td>\n",
+       "      <td>0.000339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Time_Age_4</th>\n",
-       "      <td>-0.0411</td>\n",
-       "      <td>0.00994</td>\n",
-       "      <td>-4.14</td>\n",
-       "      <td>3.48e-05</td>\n",
-       "      <td>0.0107</td>\n",
-       "      <td>-3.83</td>\n",
-       "      <td>0.00013</td>\n",
+       "      <td>-0.0263</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0122</td>\n",
+       "      <td>-2.15</td>\n",
+       "      <td>0.0313</td>\n",
+       "      <td>0.013</td>\n",
+       "      <td>-2.02</td>\n",
+       "      <td>0.0435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT1</th>\n",
-       "      <td>-2.39</td>\n",
-       "      <td>0.368</td>\n",
-       "      <td>-6.49</td>\n",
-       "      <td>8.42e-11</td>\n",
-       "      <td>0.432</td>\n",
-       "      <td>-5.53</td>\n",
-       "      <td>3.14e-08</td>\n",
+       "      <td>-3.37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.462</td>\n",
+       "      <td>-7.28</td>\n",
+       "      <td>3.26e-13</td>\n",
+       "      <td>0.602</td>\n",
+       "      <td>-5.6</td>\n",
+       "      <td>2.19e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT2</th>\n",
-       "      <td>-1.1</td>\n",
-       "      <td>0.281</td>\n",
-       "      <td>-3.89</td>\n",
-       "      <td>9.82e-05</td>\n",
-       "      <td>0.318</td>\n",
-       "      <td>-3.44</td>\n",
-       "      <td>0.000575</td>\n",
+       "      <td>-1.88</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.424</td>\n",
+       "      <td>-4.44</td>\n",
+       "      <td>8.98e-06</td>\n",
+       "      <td>0.467</td>\n",
+       "      <td>-4.03</td>\n",
+       "      <td>5.56e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT3</th>\n",
-       "      <td>-0.521</td>\n",
-       "      <td>0.166</td>\n",
-       "      <td>-3.13</td>\n",
-       "      <td>0.00173</td>\n",
-       "      <td>0.196</td>\n",
-       "      <td>-2.65</td>\n",
-       "      <td>0.00799</td>\n",
+       "      <td>-1.12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.292</td>\n",
+       "      <td>-3.82</td>\n",
+       "      <td>0.000134</td>\n",
+       "      <td>0.371</td>\n",
+       "      <td>-3.01</td>\n",
+       "      <td>0.00263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT4</th>\n",
-       "      <td>-0.752</td>\n",
-       "      <td>0.231</td>\n",
-       "      <td>-3.25</td>\n",
-       "      <td>0.00115</td>\n",
-       "      <td>0.277</td>\n",
-       "      <td>-2.71</td>\n",
-       "      <td>0.00667</td>\n",
+       "      <td>-1.61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.447</td>\n",
+       "      <td>-3.6</td>\n",
+       "      <td>0.000321</td>\n",
+       "      <td>0.576</td>\n",
+       "      <td>-2.8</td>\n",
+       "      <td>0.00519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_MOTOR_PT</th>\n",
-       "      <td>0.623</td>\n",
-       "      <td>0.0916</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>1.02e-11</td>\n",
-       "      <td>0.103</td>\n",
-       "      <td>6.07</td>\n",
-       "      <td>1.28e-09</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.8e+308</td>\n",
+       "      <td>5.56e-309</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.8e+308</td>\n",
+       "      <td>5.56e-309</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Value  Std err  t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
-       "CarOwn_2    -0.189    0.116   -1.64    0.102         0.118         -1.6   \n",
-       "CarOwn_3    -0.211    0.105      -2   0.0456         0.106        -1.99   \n",
-       "CarOwn_4     0.817   0.0816      10        0        0.0814           10   \n",
-       "Constant2       -2    0.409   -4.89 1.01e-06         0.411        -4.87   \n",
-       "Constant3     1.89    0.218    8.66        0         0.214         8.82   \n",
-       "Constant4   0.0597    0.318   0.188    0.851         0.342        0.175   \n",
-       "Cost        -0.079   0.0151   -5.23 1.68e-07        0.0175        -4.52   \n",
-       "LAMBDA     -0.0626   0.0998  -0.627    0.531         0.111       -0.562   \n",
-       "N_MOTOR       2.35    0.369    6.39 1.67e-10          0.46         5.12   \n",
-       "N_SM          1.19    0.126    9.39        0         0.156         7.59   \n",
-       "Time_Age_1 -0.0459  0.00715   -6.42 1.36e-10       0.00732        -6.27   \n",
-       "Time_Age_2 -0.0267   0.0122   -2.19   0.0287        0.0112        -2.38   \n",
-       "Time_Age_3 -0.0329   0.0067   -4.91 9.34e-07       0.00679        -4.84   \n",
-       "Time_Age_4 -0.0411  0.00994   -4.14 3.48e-05        0.0107        -3.83   \n",
-       "Total_TT1    -2.39    0.368   -6.49 8.42e-11         0.432        -5.53   \n",
-       "Total_TT2     -1.1    0.281   -3.89 9.82e-05         0.318        -3.44   \n",
-       "Total_TT3   -0.521    0.166   -3.13  0.00173         0.196        -2.65   \n",
-       "Total_TT4   -0.752    0.231   -3.25  0.00115         0.277        -2.71   \n",
-       "a_MOTOR_PT   0.623   0.0916     6.8 1.02e-11         0.103         6.07   \n",
+       "             Value  Active bound  Std err    t-test  p-value  Rob. Std err  \\\n",
+       "Constant2    -2.95             0    0.508     -5.81 6.07e-09         0.476   \n",
+       "Constant3      1.6             0 1.8e+308 8.89e-309        1          0.25   \n",
+       "Constant4    0.181             0    0.458     0.396    0.692         0.542   \n",
+       "Cost        -0.105             0   0.0202     -5.19 2.13e-07        0.0239   \n",
+       "LAMBDA      0.0767             0   0.0896     0.856    0.392         0.112   \n",
+       "N_MOTOR       1.39             0    0.218      6.37 1.87e-10         0.261   \n",
+       "N_SM             1             1    0.215      4.65 3.29e-06         0.318   \n",
+       "Time_Age_1  -0.048             0  0.00843     -5.69 1.27e-08       0.00941   \n",
+       "Time_Age_2 -0.0198             0   0.0144     -1.38    0.169        0.0131   \n",
+       "Time_Age_3 -0.0313             0  0.00831     -3.77 0.000165       0.00874   \n",
+       "Time_Age_4 -0.0263             0   0.0122     -2.15   0.0313         0.013   \n",
+       "Total_TT1    -3.37             0    0.462     -7.28 3.26e-13         0.602   \n",
+       "Total_TT2    -1.88             0    0.424     -4.44 8.98e-06         0.467   \n",
+       "Total_TT3    -1.12             0    0.292     -3.82 0.000134         0.371   \n",
+       "Total_TT4    -1.61             0    0.447      -3.6 0.000321         0.576   \n",
+       "a_MOTOR_PT       1             1 1.8e+308 5.56e-309        1      1.8e+308   \n",
        "\n",
-       "            Rob. p-value  \n",
-       "CarOwn_2           0.109  \n",
-       "CarOwn_3          0.0464  \n",
-       "CarOwn_4               0  \n",
-       "Constant2       1.14e-06  \n",
-       "Constant3              0  \n",
-       "Constant4          0.861  \n",
-       "Cost            6.24e-06  \n",
-       "LAMBDA             0.574  \n",
-       "N_MOTOR         3.01e-07  \n",
-       "N_SM            3.09e-14  \n",
-       "Time_Age_1      3.68e-10  \n",
-       "Time_Age_2        0.0173  \n",
-       "Time_Age_3      1.29e-06  \n",
-       "Time_Age_4       0.00013  \n",
-       "Total_TT1       3.14e-08  \n",
-       "Total_TT2       0.000575  \n",
-       "Total_TT3        0.00799  \n",
-       "Total_TT4        0.00667  \n",
-       "a_MOTOR_PT      1.28e-09  "
+       "            Rob. t-test  Rob. p-value  \n",
+       "Constant2          -6.2       5.5e-10  \n",
+       "Constant3          6.39      1.68e-10  \n",
+       "Constant4         0.335         0.738  \n",
+       "Cost              -4.38      1.18e-05  \n",
+       "LAMBDA            0.685         0.494  \n",
+       "N_MOTOR            5.33      9.84e-08  \n",
+       "N_SM               3.14       0.00168  \n",
+       "Time_Age_1         -5.1      3.47e-07  \n",
+       "Time_Age_2        -1.51         0.131  \n",
+       "Time_Age_3        -3.58      0.000339  \n",
+       "Time_Age_4        -2.02        0.0435  \n",
+       "Total_TT1          -5.6      2.19e-08  \n",
+       "Total_TT2         -4.03      5.56e-05  \n",
+       "Total_TT3         -3.01       0.00263  \n",
+       "Total_TT4          -2.8       0.00519  \n",
+       "a_MOTOR_PT    5.56e-309             1  "
       ]
      },
      "execution_count": 1,
@@ -332,9 +313,6 @@
     "Total_TT3 = Beta('Total_TT3',0,None,None,0)\n",
     "Total_TT4 = Beta('Total_TT4',0,None,None,0)\n",
     "\n",
-    "CarOwn_2 = Beta('CarOwn_2',0,None,None,0)\n",
-    "CarOwn_3 = Beta('CarOwn_3',0,None,None,0)\n",
-    "CarOwn_4 = Beta('CarOwn_4',0,None,None,0)\n",
     "\n",
     "LAMBDA = Beta('LAMBDA',1,None,None,0)\n",
     "\n",
@@ -368,12 +346,12 @@
     "cost_driving = DefineVariable('cost_driving', cost_driving_fuel + cost_driving_ccharge ,database)\n",
     "\n",
     "Opt1 = Constant1 + Total_TT1 * ((dur_walking) ** LAMBDA -1)/LAMBDA + Time_Age_1 * dur_walking * age\n",
-    "Opt2 = Constant2 + Total_TT2 * ((dur_cycling) ** LAMBDA -1)/LAMBDA+ CarOwn_2 * car_ownership +\\\n",
+    "Opt2 = Constant2 + Total_TT2 * ((dur_cycling) ** LAMBDA -1)/LAMBDA+ \\\n",
     "                    Time_Age_2 * dur_cycling * age\n",
-    "Opt3 = Constant3 + Cost * cost_public + Total_TT3 * (dur_public ** LAMBDA -1)/LAMBDA + CarOwn_3 * car_ownership +\\\n",
+    "Opt3 = Constant3 + Cost * cost_public + Total_TT3 * (dur_public ** LAMBDA -1)/LAMBDA +\\\n",
     "                    Time_Age_3 * dur_public * age\n",
     "Opt4 = Constant4 + Cost * cost_driving + Total_TT4 * ((dur_driving) ** LAMBDA -1)/LAMBDA +\\\n",
-    "                    CarOwn_4 * car_ownership + Time_Age_4 * dur_driving * age\n",
+    "                    Time_Age_4 * dur_driving * age\n",
     "\n",
     "\n",
     "V = {1: Opt1,2: Opt2,3: Opt3,4: Opt4}\n",
@@ -391,7 +369,7 @@
     "\n",
     "\n",
     "output_dir = \"./model-nested-output\"\n",
-    "filepath = os.path.join(output_dir, \"logit_CN_lpmc_sm_motor_public\")\n",
+    "filepath = os.path.join(output_dir, \"logit_CN_lpmc_sm_motor_public_withoutCarOwn\")\n",
     "if not os.path.exists(output_dir):\n",
     "    os.mkdir(output_dir)\n",
     "    \n",
