--- a/Project-2/LPMC_model_sm_motor.ipynb
+++ b/Project-2/LPMC_model_sm_motor.ipynb
@@ -369,7 +369,7 @@
     "cost_driving = DefineVariable('cost_driving', cost_driving_fuel + cost_driving_ccharge ,database)\n",
     "\n",
     "Opt1 = Constant1 + Total_TT1 * ((dur_walking) ** LAMBDA -1)/LAMBDA + Time_Age_1 * dur_walking * age\n",
-    "Opt2 = Constant2 + Total_TT2 * ((dur_cycling) ** LAMBDA -1)/LAMBDA+ CarOwn_2 * car_ownership +\\\n",
+    "Opt2 = Constant2 + Total_TT2 * ((dur_cycling) ** LAMBDA -1)/LAMBDA + CarOwn_2 * car_ownership +\\\n",
     "                    Time_Age_2 * dur_cycling * age\n",
     "Opt3 = Constant3 + Cost * cost_public + Total_TT3 * (dur_public ** LAMBDA -1)/LAMBDA + CarOwn_3 * car_ownership +\\\n",
     "                    Time_Age_3 * dur_public * age\n",
@@ -411,8 +411,7 @@
     "print(f\"rho bar square = {results.data.rhoBarSquare:.3g}\")\n",
     "print(f\"Output file: {results.data.htmlFileName}\")\n",
     "\n",
-    "pandasResults\n",
-    "\n"
+    "pandasResults"
    ]
   },
   {
